# zipa-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  README.md  manual.tex
tests/: conftest.py  test_core.py
tutorials/: 01_quickstart.ipynb  02_datasets_and_manifests.ipynb  03_compare_and_visualize.ipynb
web/: README.md  app.js  index.html  styles.css
zipa_cli/: __init__.py  analysis.py  cli.py  config.py  decode.py  features.py  loader.py  output.py  pipeline.py  registry.py
zipa_cli/data/: __init__.py  batching.py  sample.py  sources.py
zipa_cli/models/: __init__.py  base.py  onnx_model.py  params.py  torch_model.py
